data/iptables.rules
# Generated by iptables-save v1.8.9 (nf_tables) on Wed May 14 20:11:56 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TEST_FILTER - [0:0]
-A FORWARD -d 172.30.30.1/32 -p tcp -m tcp --dport 80 -j TEST_FILTER
-A FORWARD -d 172.30.30.1/32 -p tcp -m tcp --dport 443 -j TEST_FILTER
-A TEST_FILTER -m set --match-set wl_test_filter src -j LOG --log-prefix "WL_PASS_TEST_FILTER: " --log-level 7
-A TEST_FILTER -m set --match-set bl_test_filter src -j LOG --log-prefix "BL_DROP_TEST_FILTER: " --log-level 7
-A TEST_FILTER -m set --match-set tbl_test_filter src -j LOG --log-prefix "TBL_DROP_TEST_FILTER: " --log-level 7
-A TEST_FILTER -m set --match-set wl_test_filter src -m comment --comment "WL: Allow trusted IPs" -j ACCEPT
-A TEST_FILTER -m set --match-set bl_test_filter src -m comment --comment "BL: Block blacklisted IPs" -j DROP
-A TEST_FILTER -m set --match-set tbl_test_filter src -m comment --comment "TBL: Temp block IPs" -j DROP
-A TEST_FILTER -m comment --comment "Default: Allow remaining traffic" -j ACCEPT
COMMIT
# Completed on Wed May 14 20:11:56 2025
# Generated by iptables-save v1.8.9 (nf_tables) on Wed May 14 20:11:56 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 192.168.64.0/20 ! -o br-c48bf10c5810 -j MASQUERADE
-A POSTROUTING -s 172.23.0.0/16 ! -o br-c2f60c7d9522 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-703993fbef6c -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-c48bf10c5810 -j RETURN
-A DOCKER -i br-c2f60c7d9522 -j RETURN
-A DOCKER -i br-703993fbef6c -j RETURN
COMMIT
# Completed on Wed May 14 20:11:56 2025
